2006-09-22  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/notes/default/show_enrollment.rhtml: 
	* donrails/app/views/notes/default/noteslist.rhtml: moved into
	the default folder.

	* donrails/app/views/notes/MT/noteslist.rhtml: added a MovableType
	compatible layout.

	* donrails/app/views/notes/MT/show_enrollment.rhtml: likewise.

	* donrails/app/views/shared/default/title-articles2no.rhtml: 
	* donrails/app/views/shared/default/title-articles2.rhtml: 
	* donrails/app/views/shared/default/title-articles.rhtml: 
	* donrails/app/views/shared/default/show_direct.rhtml: 
	* donrails/app/views/shared/default/search.rhtml: 
	* donrails/app/views/shared/default/pagelink-j.rhtml: 
	* donrails/app/views/shared/default/nextlink3.rhtml: 
	* donrails/app/views/shared/default/linktitle.rhtml: 
	* donrails/app/views/shared/default/comment2.rhtml: 
	* donrails/app/views/shared/default/comment-enrollment.rhtml: 
	* donrails/app/views/shared/default/category_title_list.rhtml: 
	* donrails/app/views/shared/default/category_select.rhtml: 
	* donrails/app/views/shared/default/authorhead.rhtml: moved into default
	folder since those modules are supposed to work in the default theme.

	* donrails/app/views/shared/MT/trackback.rhtml: new file to show
	the whole of trackbacks in article.

	* donrails/app/views/shared/MT/simple-trackback.rhtml: new file to show
	the amount of trackbacks in article.

	* donrails/app/views/shared/MT/simple-comment.rhtml: new file to show
	the amount of comments in article.

	* donrails/app/views/shared/MT/post-footer.rhtml: new file to show
	a footer.

	* donrails/app/views/shared/MT/permlink.rhtml: new file to show
	a permanent link.

	* donrails/app/views/shared/MT/module-titlelist.rhtml:
	new file to show the recent articles at the sidebar.

	* donrails/app/views/shared/MT/module-search.rhtml:
	new file to show a search box at the sidebar.

	* donrails/app/views/shared/MT/module-donrails-links.rhtml: