@@ -1,0 +1,3 @@
+/* need any way to modify this file from the web interface */
+@import url(http://localhost/stylesheets/base-weblog.css);
+@import url(http://localhost/themes/theme-blahblah/theme-blahblah.css);
